[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/GameUI.gd" type="Script" id=1]
[ext_resource path="res://fonts/text-semibold.tres" type="DynamicFont" id=2]
[ext_resource path="res://fonts/text-regular.tres" type="DynamicFont" id=3]

[node name="GameUI" type="Node2D"]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_left = 1000.0
margin_right = 1280.0
margin_bottom = 720.0
__meta__ = {
"_edit_lock_": true
}

[node name="RawMetal" type="Label" parent="Panel"]
margin_left = 13.0
margin_top = 54.0
margin_right = 135.0
margin_bottom = 74.0
custom_fonts/font = ExtResource( 2 )
text = "Raw metal:"
align = 2

[node name="Count" type="Label" parent="Panel/RawMetal"]
margin_left = 128.0
margin_right = 218.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 3 )
text = "0"

[node name="MoltenMetal" type="Label" parent="Panel"]
margin_left = 13.0
margin_top = 75.0
margin_right = 135.0
margin_bottom = 95.0
custom_fonts/font = ExtResource( 2 )
text = "Molten metal:"
align = 2

[node name="Count" type="Label" parent="Panel/MoltenMetal"]
margin_left = 128.0
margin_right = 218.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 3 )
text = "0"

[node name="WetPlanchets" type="Label" parent="Panel"]
margin_left = 13.0
margin_top = 95.0
margin_right = 135.0
margin_bottom = 115.0
custom_fonts/font = ExtResource( 2 )
text = "Wet planchets:"
align = 2

[node name="Count" type="Label" parent="Panel/WetPlanchets"]
margin_left = 128.0
margin_right = 218.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 3 )
text = "0"

[node name="Planchets" type="Label" parent="Panel"]
margin_left = 13.0
margin_top = 116.0
margin_right = 135.0
margin_bottom = 136.0
custom_fonts/font = ExtResource( 2 )
text = "Planchets:"
align = 2

[node name="Count" type="Label" parent="Panel/Planchets"]
margin_left = 128.0
margin_right = 218.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 3 )
text = "0"

[node name="Coins" type="Label" parent="Panel"]
margin_left = 13.0
margin_top = 137.0
margin_right = 135.0
margin_bottom = 157.0
custom_fonts/font = ExtResource( 2 )
text = "Coins:"
align = 2

[node name="Count" type="Label" parent="Panel/Coins"]
margin_left = 128.0
margin_right = 218.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 3 )
text = "0"
